--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </p>
          </div>
       </div>
-      <div class="div">
+      <div class="featured-architect">
 <img src="images/architect.png" alt="">
 <button id="exprience-badge" class="btn-primary">
   <span id="experience-years">10+Years</span>
